# artist-crafting

./: .env.example  .gitmodules  .luarc.json  Cargo.toml  README.md
.zed/: tasks.json
migration/src/: m20220101_000001_create_table.rs
plugin/: .darklua.json  Justfile  rokit.toml
plugin/src/: main.lua
src/: lib.rs  main.rs  routes.rs
src/collector/models/: minecraft.rs
src/collector/models/minecraft/: recipe.rs  tag.rs
src/database/: entities.rs
src/database/entities/: recipes.rs  tags.rs
src/errors/: mod.rs  totp.rs
src/middlewares/: totp.rs
src/routes/: api.rs  collector.rs
src/routes/api/: items.rs  recipes.rs  tags.rs
