[package]
name = "artist-crafting"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "with-json",
    "with-uuid",
    "debug-print",
    "macros",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
migration = { path = "./migration" }

[workspace]
resolver = "3"
members = [".", "migration"]
